--- a/style.css
+++ b/style.css
@@ -2,73 +2,178 @@
 
 *,
 html {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #e1dcc5;
+  background-color: #e1dcc5;
 }
 
 nav {
-    background-color: #000;
-    height: 7vh;
-    width: 100%;
-    background-image: url(img/library-icon.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #000;
+  height: 7vh;
+  width: 100%;
+  background-image: url(img/library-icon.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 ul {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 li {
-    list-style: none;
-    color: #fff;
-    font-family: 'Alegreya', serif;
+  list-style: none;
+  color: #fff;
+  font-family: 'Alegreya', serif;
+  display: flex;
+  width: 25vw;
 }
 
 li:first-of-type {
-    margin-left: 15vw;
+  margin-left: 15vw;
 }
 
 a {
-    display: flex;
-    align-items: flex-end;
+  display: flex;
+  align-items: flex-end;
+}
+
+.newBook {
+  cursor: pointer;
 }
 
 img {
-    width:6%;
+  width:6%;
 }
 
 .bar {
-    display: block;
-    width: 7.5vw;
-    height: 0.7vh;
-    margin: 0.6vh auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #fff;
-    margin-right: 3vw;
-  }
+  display: block;
+  width: 7.5vw;
+  height: 0.7vh;
+  margin: 0.6vh auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #fff;
+  margin-right: 3vw;
+}
 
 .hamburger {
   display: none;
 }
 
+.books {
+  height:50vh;
+}
+.cont-hBooks {
+  display: flex;
+}
+
+.cont-book {
+  display: flex;
+}
+
+.title {
+  color: red;   
+}
+
+.x-image {
+background-color: #000;
+margin-left: 80vw;
+cursor: pointer;
+}
+
+.add-title {
+  position: fixed;
+  top: 0;
+  left: -100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(15px);
+}
+
+.add-title.active {
+  left: 0;
+}
+
+.modal-add {
+  width:90vw;
+  height: 30vh;
+  background-color: cadetblue;
+  padding-top: 3vh;
+  border-radius: 4px; 
+}
+
+h3 {
+  cursor: pointer;
+  padding-bottom: 3vh;
+  padding-left: 23vw;
+}
+
+.title-label {
+  margin-left: 5vw;
+  font-size: 18px;
+}
+
+.title {
+  width: 65vw;
+  font-size: 15px;
+  margin-left: 0.5vw;
+}
+
+.pages-label {
+  margin-left: 5vw;
+  font-size: 18px;
+}
+
+.pages {
+  width:26vw;
+  margin-right: 20vw;
+  font-size: 15px;
+}
+
+.author-label {
+  margin-left: 5vw;
+  font-size: 18px;
+}
+
+.author {
+  margin-right: 9.6vw;
+  font-size: 15px;
+}
+  
+.published-label {
+  margin-left: 5vw;
+  font-size: 18px;
+}
+
+.published {
+  width:19.3vw;
+  font-size: 15px;
+  margin-right: 20vw;
+}
+
+.submit {
+    width: 30vw;
+    height: 4vh;
+}
 @media (max-width: 768px) {
 li:last-of-type {
-    display: none;
+  visibility: hidden;
 }  
 
 li:nth-of-type(2) {
-    display: none;
+    visibility: hidden;
 }  
 
 .hamburger {
@@ -77,8 +182,11 @@ li:nth-of-type(2) {
 }  
 .hamburger.active .bar:nth-child(1) {
     margin-top: 10px;
-    margin-left: 60vw;
+    margin-left: 0vw;
     transform: translateY(12px) rotate(45deg);
+    position: absolute;
+    top: 0.5vh;
+    left: 90vw;
   }
 
 .hamburger.active .bar:nth-child(2) {
@@ -87,9 +195,49 @@ li:nth-of-type(2) {
 
 .hamburger.active .bar:nth-child(3) {
   margin-top: 10px;
-  margin-left: 60vw;
-  transform: translateY(-16px) rotate(-45deg);
+  margin-left: 0;
+  transform: translateY(-12px) rotate(-45deg);
+  position: absolute;
+  top: 4vh;
+  left: 90vw;
 }
+
+.nav-bar.active {
+  position: fixed;
+  flex-direction: column;
+  left: 0;
+  transition: 0.3s;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  padding-bottom: 10vh;
+  background-image: none;
+}
+
+ul.active {
+  display:flex;
+  flex-direction: column;
+  font-size: 2.0rem;
+  align-items: center;
+}
+
+ul.active > li {
+  width: 50vw;
+  padding-top: 5vh;
+}
+
+ul.active > li:last-of-type {
+  visibility: visible;
+}
+
+ul.active > li:nth-of-type(2) {
+    visibility: visible;
+}
+
+ul.active > li:first-of-type {
+  visibility: hidden;
+}
+
 }
 
 
